Minor changes in data downloading with WFDB

--- a/PhysiobankDataGathering.ipynb
+++ b/PhysiobankDataGathering.ipynb
@@ -192,24 +192,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cwd = os.getcwd()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir = cwd + '/data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -223,14 +205,16 @@
     }
    ],
    "source": [
-    "# wfdb.dl_database('gaitndd', dl_dir=data_dir)"
+    "cwd = os.getcwd()\n",
+    "data_dir = cwd + '/data/'\n",
+    "wfdb.dl_database('gaitndd', dl_dir=data_dir)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The database also includes time series data in plain text format. These files have not been downloaded with the wfdb.dldatabase function."
+    "The database also includes time series data in plain text format. These files have not been downloaded with the wfdb.dldatabase function. Using the following libraries it is possible to retrieve the necessary files from the links in the _gaitndd_ website"
    ]
   },
   {
@@ -248,7 +232,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -324,7 +308,6 @@
    ],
    "source": [
     "# Download all .ts files\n",
-    "\n",
     "url = 'https://physionet.org/physiobank/database/gaitndd'\n",
     "r = requests.get(url)\n",
     "soup = BeautifulSoup(r.text)\n",
@@ -335,6 +318,14 @@
     "        print('Downloading', link + '...')\n",
     "        file_url = url + '/' + link\n",
     "        urllib.request.urlretrieve(file_url, data_dir + link)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test record\n",
+    "Now let's take a look at a sample record from this dataset."
    ]
   },
   {
